--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 <body>
 
   <h1 class="message">We're launching soon</h1>
+  <h2 class="finalMessage">Time's up</h2>
 
   <div class="date">
-    <div class="rectangle">x</div>
-    <div class="rectangle">x</div>
-    <div class="rectangle">x</div>
-    <div class="rectangle">x</div>
+    <div class="rectangle"><span class="days">88</span></div>
+    <div class="rectangle"><span class="hours">88</span></div>
+    <div class="rectangle"><span class="minutes">88</span></div>
+    <div class="rectangle"><span class="seconds">88</span></div>
   </div>
 
 <footer class="footer">
+  <img class="footer__svg"src="images/pattern-hills.svg" alt="hills">
   <ul class="links">
     <li class="element">
       <a href="#">
@@ -43,5 +45,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Hrehorii</a>.
   </div> -->
+  <script src="index.js"></script>
 </body>
 </html>
