--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">  
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@1,700&display=swap" rel="stylesheet">
-  <title>Timer</title>
+  <title>Portfolio</title>
 </head>
 <body>
 
-  <h1 class="message">We're launching soon</h1>
+  <h1 class="message">Launching soon</h1>
   <h2 class="finalMessage">Time's up</h2>
 
   <div class="date">
@@ -24,18 +25,18 @@
   <img class="footer__svg"src="images/pattern-hills.svg" alt="hills">
   <ul class="links">
     <li class="element">
-      <a href="#">
-        <img src="images/icon-facebook.svg" alt="face">
+      <a href="https://github.com/P0NC1K">
+        <img class="icon" src="images/icon-github.svg" alt="face">
       </a>
     </li>
     <li class="element">
-      <a href="#">
-        <img src="images/icon-pinterest.svg" alt="pin">
+      <a href="https://www.upwork.com/freelancers/~01e751b25c5ee1c07b">
+        <img class="icon" src="images/icon-upwork.svg" alt="pin">
       </a>
     </li>
     <li class="element">
-      <a href="#">
-        <img src="images/icon-instagram.svg" alt="insta">
+      <a href="https://www.instagram.com/grigoregherdelescu/">
+        <img class="icon" src="images/icon-instagram.svg" alt="insta">
       </a>
     </li>
   </ul>
